# lean-lsp-mcp

./: .dockerignore  .gitignore  .harvest-manifest.json  CLAUDE.md  Dockerfile  README.md  compare_chroma_usearch.py  compare_implementations.py  flake.nix  pyproject.toml  release.sh  test_leansearch_real.py
.github/workflows/: ci.yml  integration-tests.yml
docker/: entrypoint.sh
docs/: adding-a-tool.md  tools.md  tools_list.md
lean-lsp-mcp/: prompts.py  server.py
lean-mcp/: LeanMcp.lean  Main.lean  README.md  lake-manifest.json  lakefile.lean
lean-mcp/LeanMcp/: Json.lean  Lsp.lean  Mcp.lean  Search.lean  Tools.lean
scripts/: bench_multi_attempt.py  test_local_leansearch.py  test_mcp_status.py
src/lean_lsp_mcp/: __init__.py  client_utils.py  config.py  coordination.py  file_utils.py  goal_tracker.py  hammer.py  instructions.py  leansearch.py  long_proof_utils.py  loogle.py  loogle_local.py  minimal_hypotheses.py  models.py  outline_utils.py  profile_utils.py  render_utils.py  repl.py  repl_models.py  resolve.py  search_utils.py  semantic_search.py  server.py  syntax_utils.py  tree_viz.py  utils.py  verify.py
tests/: conftest.py  test_code_actions.py  test_diagnostic_line_range.py  test_editor_tools.py  test_error_handling.py  test_file_caching.py  test_goal_search.py  test_goal_tracker.py  test_goal_tracker_comprehensive.py  test_highlight_occurrences.py  test_interactive_tools.py  test_logging.py  test_max_wait_timeout.py  test_minimal_hypotheses.py  test_module_hierarchy_tools.py  test_multi_attempt_context.py  test_multi_attempt_false_success.py  test_nix_flake.py  test_outline.py  test_pool.py  test_pool_integration.py  test_project_search_tools.py  test_project_tools.py  test_refactoring_tools.py  test_repl.py  test_search_tools.py  test_semantic_tools.py  test_session_tool_policy.py  test_snippet_correctness.py  test_snippet_perf.py  test_snippet_perf2.py  test_streamable_http_shared_client.py  test_structured_output.py  test_transport_disconnect.py  test_verify.py  test_widget_tools.py
tests/helpers/: lsp.py  mcp_client.py  test_project.py
tests/lean_project/: DiagnosticTest.lean
tests/manual/: calls_smoke.json  drive.py
tests/test_project/: BenchmarkTest.lean  CacheTest.lean  CodeActionsTest.lean  DeclarationDiagnosticTest.lean  DiagnosticTest.lean  EditorTools.lean  GoalSample.lean  MiscTools.lean  (+22 more)
(+67 files in other folders)
